--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.puissancequatre.Play"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_play"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
