--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,38 +13,34 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.puissancequatre.MainActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>  
         </activity>
+        
         <activity
-            android:name="com.puissancequatre.Play"
+            android:name="com.puissancequatre.OnePlayer"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_play"
             android:theme="@style/FullscreenTheme" >
         </activity>
         
-        <!-- duplicate  <activity
-            android:name="com.puissancequatre.PlayActivity"
+  		<activity
+            android:name="com.puissancequatre.TwoPlayers"
             android:label="@string/title_activity_play" >
         </activity>
-        -->
-        
-        <!-- hicham modif ====>  duplicate regisration
         
         <activity
-            android:name="com.puissancequatre.Play"
+            android:name="com.puissancequatre.Score"
             android:label="@string/title_activity_play" >
         </activity>
-        
-        -->
-        <!-- hicham modif -->
-        
+ 
         <activity android:name="com.puissancequatre.PlayActivity"
             android:label="@string/title_activity_play"
             android:parentActivityName="com.puissancequatre">
@@ -52,5 +48,5 @@
                 android:value="com.puissancequatre" />
         </activity>
         </application>
+        
 </manifest>
-<!-- hicham modif -->
