supprimer button apropos
supprimer button apropos et l'ajouter au menu , changer background ,et
autres

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//res/values/strings.xml=UTF-8
 encoding//src/com/p4_paris8_project/PlayActivity.java=UTF-8
 encoding//src/com/p4_paris8_project/Puissance4Game.java=UTF-8
