--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.p4_paris8_project.MainActivity"
-            android:label="@string/app_name" 
-        	android:screenOrientation="portrait" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,9 +25,13 @@
         </activity>
         <activity
             android:name="com.p4_paris8_project.PlayActivity"
-            android:label="@string/title_activity_play" 
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_play"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="com.p4_paris8_project.Apropos"
+            android:label="@string/title_activity_apropos" >
         </activity>
     </application>
 
